# "dox/ChangeLog"
#	$Id: ChangeLog,v 1.16.2.2 2007/08/12 19:44:01 fang Exp $

2007-08-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-46-chpsim-07-06:
	  chpsim/: Now extract documentation from module library functions
		in lib/libchpfn/*.cc, included by stdchpfn.texi.
	  mk/scantexdepend.awk: reject strings that cannot be file names,
		because they contain special shell characters


2007-08-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-46-chpsim-07-05:
	  chpsim/: options and commands documentation relocated
		to source code and extracted for ease of maintainence.


2007-08-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-45:
	  Make.dox-tail: .NOTPARALLEL: ps pdf removed, 
		in favor of explicit non-phony targets.
		subdir Makefile.am's updated accordingly.
	  chpsim/extending.texi: More notes on compiling modules.  


	* HACKT-00-01-04-main-00-81-44:
	  Make.dox-head: use installdirs.mk


2007-07-31	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-39-chpsim-06-26:
	  Completed first draft of CHPSIM manual in Texinfo.
	  End of branch, merge to trunk.


2007-07-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-39-chpsim-06-25:
	  chpsim/extending.texi: wrote most of chapter on dl-module usage.


	* HACKT-00-01-04-main-00-81-39-chpsim-06-24:
	  Stripped out use of @float, @caption because Texinfo 4.6 doesn't
		support it.  WTF!?  (And I couldn't think of a workaround.)
	  [curses in perl]


	* HACKT-00-01-04-main-00-81-39-chpsim-06-23:
	  Much work on chpsim texinfo documentation, 
		mostly usage options and interpreter commands.  
	  chpsim: Moved chpsim.texi to hacchpsim.tex to avoid potential
		confusion with old chpsim (if documents exist?)
	  Make.dox-head: definitions moved to Make.stddef.


2007-07-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-39-chpsim-06-22: