@@ -1,5 +1,5 @@
 @c "extending.texi"
-@c $Id: extending.texi,v 1.3 2007/08/09 03:47:06 fang Exp $
+@c $Id: extending.texi,v 1.3.2.1 2007/08/15 02:45:48 fang Exp $
 
 @node Extending simulation
 @chapter Extending the simulator
@@ -35,6 +35,7 @@ throughout this section.
 * Run-time Module Loading:: Loading libary modules.
 * Run-time Diagnostics:: When stuff goes wrong.
 * chpsim-function example:: an installed example.
+* Global Initialization:: setting up global variables.
 * Module Rationale:: design choices.
 @end menu
 
@@ -429,7 +430,7 @@ do the following:
 
 For example, @samp{mkdir play && cd play}.
 @item Copy the example's @file{Makefile.in} locally to @file{Makefile}.
-@item Edit the @file{Makefile}:
+@item Edit the @file{Makefile} (instructions included therein):
 @enumerate a
 @item Point @t{srcdir} and @t{VPATH} to 
 
@@ -451,6 +452,48 @@ Some additional clean targets are also provided.
 If you want to modify the examples, 
 the (non-VPATH) alternative is to copy the whole example directory
 and dispense with setting @t{srcdir} and @t{VPATH}.  
+
+@c ****************************************************************************
+@node Global Initialization
+@section Global Initialization
+@cindex initialization, global
+@cindex global initialization
+
+External functions often access global variables outside the 
+scope of the simulator.  
+Global variables and objects in modules can be initialized
+in several ways.  
+One way is to initialize object through their class constructors.
+Global objects are constructed in source order in their respective
+translation units, which is also how functions are registered.  
+Plain-old-data, however, are often initialized through a function call.
+Another way is to do initialization work (directly, or through function call)
+in a static object constructor.  
+
+@verbatim
+class module_init {
+public:
+    module_init() {
+        // initializations and resource acquisitions...
+    }
+    ~module_init() {
+	// deallocations and resource releasing...
+    }
+};
+
+static const module_init __init__;
+@end verbatim
+
+Above, the @code{__init__} object's constructor will perform
+the initializations and resource allocations for this module.  
+Since modules are not explicitly unloaded (by @samp{dlclose}), 
+module destruction will not occur until @command{chpsim} exits.  
+[Ask me if you need destruction earlier.]
+
+C++ Reminder: global object destruction occurs in the reverse order of
+construction.  
+C Reminder: the order of initialization between different translation
+units (even in the same module) is undefined, and should not be relied upon.
 
 @c ****************************************************************************
 @node Module Rationale
