@@ -3,6 +3,13 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2007-08-14	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-46-chpsim-07-08:
+	  No source revision, chpsim +library documentation (dox/ChangeLog).
+	  Ready to merge.
+
+
 2007-08-12	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-46-chpsim-07-07:
