@@ -1,5 +1,11 @@
 # "dox/ChangeLog"
-#	$Id: ChangeLog,v 1.16.2.2 2007/08/12 19:44:01 fang Exp $
+#	$Id: ChangeLog,v 1.16.2.3 2007/08/15 02:45:45 fang Exp $
+
+2007-08-14	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-46-chpsim-07-08:
+	  chpsim/: documented standard library usage, other feedback fixes.
+
 
 2007-08-11	David Fang		<fangism@users.sourceforge.net>
 
